# haskell-gitter

./: LICENSE  gitter.cabal  stack.yaml
src/: Gitter.hs
src/Control/Monad/Trans/: X.hs
src/Data/String/: X.hs
src/Gitter/: Monad.hs  Types.hs
src/Network/: Gitter.hs
src/Network/Gitter/: Monad.hs  Types.hs
