name:           gitter
version:        0.1
synopsis:       Gitter.im API client
description:    Gitter.im is a programmers-oriented GitHub-based web-chat.
                This package provides a (partial) implementation of its API.

maintainer:     Yuriy Syrovetskiy <cblp@cblp.su>
license:        GPL-3
license-file:   LICENSE

build-type:     Simple
cabal-version:  >= 1.10
category:       API, Network

library
    build-depends:      aeson
                      , base
                      , bytestring
                      , exceptions
                      , lens
                      , lens-aeson
                      , mtl
                      , text
                      , wreq
    default-language:   Haskell2010
    exposed-modules:    Network.Gitter
                        Network.Gitter.Monad
                        Network.Gitter.Types
    hs-source-dirs:     src
    other-modules:      Control.Monad.Trans.X
                        Data.String.X

source-repository head
    type:     git
    location: https://github.com/cblp/haskell-gitter.git
